AUT-2203 Add minimum_acr_value to HydraClient metadata
